Made changes to signup.erb

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -3,11 +3,10 @@
 <h2>Create a new account</h2>
 
 <form action="/signup" method="post">
-  <label for="email">Email:</label>
-    <input type="text" name="email" id="email">
-  <label for="username">Username:</label>
-    <input type="text" name="username" id="username">
-  <label for="password">Password:</label>
-    <input type="text" name="password" id="password">
-  <button type="submit" value="submit">Create Account</button>
+  Enter name: <input type=text name="name" >
+  Enter Username: <input type=text name="username" >
+  Enter Email: <input type=email name="email" > 
+  Enter Password: <input type=password name="password" > 
+  
+  <input type=submit value="Create Account" >
 </form>
