--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,9 +3,8 @@
 <h2>Login</h2>
 
 <form action="/login" method="post">
-  <label for="username">Username:</label>
-    <input type="text" name="username" id="username">
-  <label for="password">Password:</label>
-    <input type="text" name="password" id="password">
-  <button type="submit" value="submit">Log In</button>
+  Enter Username: <input type=text name="username" >
+  Enter Password: <input type=password name="password" > 
+
+<input type=submit value="Login" >
 </form>
