--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -11,6 +11,17 @@
 
 <h2>Add a new Review!</h2>
 
-<form action="/review" method="POST">
-  
+
+<form action="/review" method="post">
+Title of Book: <input type=text name="title" >
+Author: <input type=text name="author" >
+<div>
+<br>
+Comments:  
+<textarea rows = "5" cols = "50" name = "description">
+Your thoughts on the book...
+</textarea>
+<br>
+<input type=submit value="Submit Review" >
+<br>
 </form>
