--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -4,8 +4,14 @@
 
 <form action="/signup" method="post">
   Enter name: <input type=text name="name" >
+  <div>
+  <br>
   Enter Username: <input type=text name="username" >
-  Enter Email: <input type=email name="email" > 
+  <div>
+  <br>
+  Enter Email: <input type=email name="email" >  
+  <div>
+  <br>
   Enter Password: <input type=password name="password" > 
   
   <input type=submit value="Create Account" >
