--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -9,4 +9,4 @@
     <h2>A place to log and review your reading adventures.</h2>
     <h3>Keep track of the books you have read and dicover what fellow Book Nook members have been loving!</h3>
 
-  <h3><a href="/users/signup">Sign up</a> <a href="/users/login">Log in</a></h3>
+  <h3><a href="/users/signup">Sign up</a><div><a href="/users/login">Log in</a></h3>
