Added Migration add column to Reviews

--- a/app/views/reviews/index.erb
+++ b/app/views/reviews/index.erb
@@ -4,6 +4,6 @@
   <div>
     
     <p>Created by: <%= review.user.username %></p>
-    <p>Review Score: <%= review.review_score %></p>
+    <p>Review Comments: <%= review.review_comments %></p>
   </div>
 <% end %>
