--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -12,13 +12,13 @@
 <h2>Add a new Review!</h2>
 
 
-<form action="/review" method="post">
+<form action="/reviews" method="post">
 Title of Book: <input type=text name="title" >
 Author: <input type=text name="author" >
 <div>
 <br>
 Comments:  
-<textarea rows = "5" cols = "50" name = "description">
+<textarea rows = "5" cols = "50" name = "comments">
 Your thoughts on the book...
 </textarea>
 <br>
