--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -13,7 +13,15 @@
 
 
 <form action="/reviews" method="post">
-
+Title of Book: <input type=text name="title" >
+Author: <input type=text name="author" >
+<div>
+<br>
+Comments:  
+<textarea rows = "5" cols = "50" name = "comments">
+Your thoughts on the book...
+</textarea>
+<br>
 <input type="submit" value="Submit Review" >
 <br>
 </form>
