--- a/app/views/reviews/new.erb
+++ b/app/views/reviews/new.erb
@@ -2,7 +2,7 @@
 
 <h2>Add New Review</h2>
 
-<form action="/review" method="post">
+<form action="/reviews" method="post">
 Title of Book: <input type=text name="title" >
 Author: <input type=text name="author" >
 <div>
