--- a/app/views/reviews/show.erb
+++ b/app/views/reviews/show.erb
@@ -4,13 +4,13 @@
 <div>
   <h3><a href="/books/<%= @book.id %>"><%= @book.name %></a> Review</h3>
   <br>
-  <p>Review:
+  <p>Title of Book: <%= @review.title %></p>
   <br>
   <p>Review Created by: <%= @user.username %></p>
 </div>
 
 <button type="submit" value="submit"><a href="/books/<%= @review.id %>/edit">Edit Review</a></button>
-
+<a href="/reviews/<%= @review.id %>/edit">Edit Review</a>
 <form action="/reviews/<%= @review.id %>/delete" method="POST">
   <input type="hidden" id="hidden" name="_method" value="DELETE">
   <button type="submit" value="submit">Delete Review</button>
