--- a/app/views/reviews/show.erb
+++ b/app/views/reviews/show.erb
@@ -2,14 +2,12 @@
 
 
 <div>
-  <h3><a href="/books/<%= @book.id %>"><%= @book.name %></a> Review</h3>
   <br>
   <p>Title of Book: <%= @review.title %></p>
   <br>
-  <p>Author: <%= @review.author
+  <p>Author: <%= @review.author %></p>
   <br> 
-  <p>Comments: <%= @review.comments 
+  <p>Comments: <%= @review.comments %></p>
   <br>
-  <p>Review Created by: <%= @user.username %></p>
 </div>
 
