--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -1,7 +1,5 @@
 <h1>Book Log</h1>
 
 <% @books.each do |book| %>
-  <div>
-    <p>Number of Reviews: <%= books.users.size %></p>
-  </div>
+  <h4><a href="/books/<%= book.id %>"> <%= book.title %></h4></a>
 <% end %>
