--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,21 +9,23 @@
 
     <title>SinatraApp</title>
 
-    <nav>
-      <% if logged_in? %>
-        <% @user = current_user %>
-        <button type="submit" value="submit"><a href="/users/<%= @user.id %>">View My Reviews</a></button>
-        <button type="submit" value="submit"><a href="/reviews/new">Add Review</a></button>
-        <button type="submit" value="submit"><a href="/logout">Log Out</a></button>
-      <% end %>
-    </nav>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+  <nav>
+        <%if logged_in?%>
+        <a href="/users/<%= current_user.id %>">View My Reviews</a>
+        <a href="/reviews/new">Add Review</a>
+        <a href="/logout">Log Out</a>
+        <%end%>
+      
+    </nav>
+
     <div class="wrapper">
+  
 
       <% flash.keys.each do |type| %> 
           <div data-alert class="flash <%= type %> alert-box radius">
