--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,9 +17,9 @@
   <body>
   <nav>
         <%if logged_in?%>
-        <a href="/users/<%= current_user.id %>">View My Reviews</a>
-        <a href="/reviews/new">Add Review</a>
-        <a href="/logout">Log Out</a>
+        <a href="/users/<%= current_user.id %>"><button>My Reviews</button></a>
+        <a href="/reviews/new"><button>Add Review</button></a>
+        <a href="/logout"><button>Log Out</button></a>
         <%end%>
       
     </nav>
