--- a/app/views/reviews/index.erb
+++ b/app/views/reviews/index.erb
@@ -1,8 +1,10 @@
 <h1>Book Nook</h1>
 
 <% @reviews.each do |review| %>
-  <div>
-    <p>Created by: <%= review.user.username %></p>
-    <p>Review Comments: <%= review.review_comments %></p>
-  </div>
+ 
+    <p>Created by: <%= reviews.user.username %> <a href="/reviews/<%= reviews.id %>/edit</a> </p>
+    <p>Title of Book: <%= review.review.title %></p> 
+    <p>Author of Book: <%= reviews.review.author %></p>
+    <p>Review Comments: <%= reviews.review_comments %></p>
+  
 <% end %>
