--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -17,6 +17,11 @@
     <br>
     </form>
 
+    <form action="/reviews/<%=@review.id%>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Review">
+</form>
+
 
 
 
