welcome page login

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,5 +8,18 @@
     <h1>Welcome to Book Nook!</h1> 
     <h2>A place to log and review your reading adventures.</h2>
     <h3>Keep track of the books you have read and dicover what fellow Book Nook members have been loving!</h3>
-
-  <h3><a href="/users/signup">Sign up</a><div><a href="/users/login">Log in</a></h3>
+    
+    
+    <form action="/login" method="post">
+    <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" name="username" id="username" aria-describedby="username" placeholder="Enter Username">
+    </div>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Password</label>
+    <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
+    <button type="submit" class="btn btn-block mybtn btn-primary tx-tfm">Submit</button>
+    </div>
+    
+    
+      <h3><a href="/users/signup">Sign up</h3>
