--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,6 @@
 <h1><%= @user.username %>'s Reviews</h1>
+<h4><a href="<%=@user.id%>/edit">Edit your profile</h4></a>
+
 
 <h2>You have <%= @user.reviews.size %> Book(s) logged!</h2>
 
