Created new.erb in Books

--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,1 +1,7 @@
 <h1>Book Nook</h1>
+
+<form action="/books" method="post">
+    Title: <input type="text" name="title">
+    Comments: <textarea name="comments"></textarea>
+    <input type="submit" value="Create a New Review">
+</form>
