--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,5 +1,7 @@
 <h1>Book Nook</h1>
 
+<h2> Create a Review for a New Book!</h2>
+
 <form action="/books" method="post">
     Title: <input type="text" name="title">
     Comments: <textarea name="comments"></textarea>
