Edited reviews controller

--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -1,5 +1,5 @@
 <h1>Book Log</h1>
 
 <% @books.each do |book| %>
-  <h4><a href="/books/new<%= book.id %>"> <%= book.title %></h4></a>
-<% end %>
+    <h4><a href="/books/<%= book.id %>"> <%= book.title %></h4></a>
+  <% end %>
