--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -4,11 +4,11 @@
 
 <form action="/reviews/<%=@review.id%>" method= "POST">
     <input type="hidden" name="_method" value="PATCH">
-    Title of Book: <input type=text name="title" >
-    Author: <input type=text name="author" >
+    <p>Title of Book: <input type=text name="title" value="<%= @review.title %>"></p>
+    <p>Author: <input type=text name="author" value="<%= @review.author %>"></p>
     <div>
     <br>
-    Comments:  
+    <p>Comments:  
     <textarea rows = "5" cols = "50" name = "description">
     Your thoughts on the book...
     </textarea>
@@ -27,17 +27,3 @@
 
 
 
-
-#     <p>Title of Book: <input type=text name="title" value="<%= @review.title %>"></p>
-#     <p>Author: <input type=text name="author" ></p>
-#     <div>
-#         <br>
-#         <p>Comments:</p>  
-#         <textarea rows = "5" cols = "50" name = "comments">
-#             <p>Your thoughts on the book...</p>
-#         </textarea>
-#         <br>
-#         <input type="submit" value="Edit Review" >
-#         <br>
-#     </div>
-# </form>
