--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -6,7 +6,7 @@
 
 <h3>Review(s):</h3>
   <% @user.reviews.each do |review| %>
-    <h4><a href="/reviews/<%= review.id %>"> <%= review.title %></h4></a>
+    <h4><a href="/reviews/<%=review.id%>/edit"> <%= review.title %></h4></a>
   <% end %>
 
 <br>
