--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
   <body>
   <nav>
         <%if logged_in?%>
-        <a href="/users/<%= current_user.id %>"><button>My Reviews</button></a>
+        <a href="/users/<%= current_user.id %>"><button>My Profile</button></a>
         <a href="/books"><button>Review a New Book</button></a>
         <a href="/logout"><button>Log Out</button></a>
         <%end%>
