Made changes to show.erb in books

--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,11 +1,10 @@
 <h1>Book Nook</h1>
 
-
+<h2>Here is a little more info on this Book</h2>
 
 <br>
-<br>
 
-<h2><%= @book.title %></h2>
+<p>Title <%= @book.title %></p>
 
 <h3>Reviews:</h3>
   <% @book.reviews.each do |review| %>
