Edited Books show.erb

--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -8,10 +8,14 @@
 <p>Author: <%= @book.author %></p> 
 <p>Summary: <%= @book.summary %></p>
 
+<a href="/books/new/">Add Your Review</a>
+
+<br>
+<br>
+
 <h3>Reviews:</h3>
-  <% @book.reviews.each do |review| %>
-    <h4><%= review.user.username %></h4>
+<% @book.reviews.each do |review| %>
+  <h4><%= review.user.username %></h4>
 <br>
-    <input type="submit" value="Add a Review" >
 <br>
-  <% end %>
+<% end %>
